Fix assuming model is ready to sync during DisableSync()

In tests (I believe the scenario cannot be reproduced otherwise), there
are situations where DisableSync() is exercised before the model is
ready to sync. Hence, the bridge should propagate the readiness state to
the newly created processor during DisableSync(), without making the
assumption that it must have been ready.

The proposed implementation is not elegant, because the semantics of
IsTrackingMetadata() are somewhat abused to assume it reflects model
readiness (which is the case for the only production change processor).
However, we will replace this is in a follow-up patch anyway, so it's
best to keep the changes as small as possible.

Bug: 819233
Change-Id: Idecf65ade939120fc89bace63b1844176cde9eb3
Reviewed-on: https://chromium-review.googlesource.com/951786
Reviewed-by: Jan Krcal <jkrcal@chromium.org>
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541431}
Former-commit-id: b142aad18f8bdabcd353747f4ef61861efcec860